syntax = "proto3";
package textile.crypto.pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;

enum KeyType {
    RSA = 0;
    Ed25519 = 1;
    Secp256k1 = 2;
    ECDSA = 3;
}

message PublicKey {
    KeyType type = 1;
    bytes data = 2;
}

message PrivateKey {
    KeyType type = 1;
    bytes data = 2;
}
